# blog

./: .nojekyll  404.html  README.md  _config.yml  _quarto.yml  about.html  index.html  index.qmd  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
_fastpages_docs/: _setup_pr_template.md
_freeze/drafts/data-project-config/index/execute-results/: html.json
_freeze/posts/tidy-data-with-python/2022-03-07-tidy-data-with-python/execute-results/: html.json
_freeze/posts/tidy-data-with-python/index/execute-results/: html.json
_notebooks/: 2020-02-20-test.ipynb  2020-09-01-fastcore.ipynb  2022-02-18-tidy-data-with-python.ipynb  2022-03-07-tidy-data-with-python.ipynb
about/: index.html
assets/css/: style.css.map
assets/js/: search-data.json
categories/: index.html
drafts/data-project-config/: index.ipynb  index.qmd
drafts/dev-containers/: index.qmd
drafts/python-lambda-wth-poetry/: index.qmd
drafts/tidy-data-with-python/: 2022-03-07-tidy-data-with-python.html
drafts/tidy-data-with-python/tidy_data_with_python/: 2022-03-07-tidy-data-with-python.ipynb
fastcore/: index.html
jupyter/2020/02/20/: test.html
markdown/2020/01/14/: test-markdown-post.html
posts/post-with-code/: index.html
posts/tidy-data-with-python/: 2022-03-07-tidy-data-with-python.html  2022-03-07-tidy-data-with-python.qmd  index.html  index.qmd
posts/welcome/: index.html
search/: index.html
