[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Ian <ian@dataq.co.za>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
